fix: Remove overly restrictive NOT action/msg filters blocking all search results

--- a/configs/savedsearches-fortigate-production-alerts.conf
+++ b/configs/savedsearches-fortigate-production-alerts.conf
@@ -1,3 +1,12 @@
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+# FortiGate Production Alerts - Real-time Alerts + Metrics
+# Channel 1 (#security-firewall-alert): Real-time alerts (001-005)
+# Channel 2 (#security-firewall): LogID-based metric collection (001-2 through 005-2)
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+# 001: Config Change (Channel 1 - Real-time Alert)
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 [001.alert_FortiGate_Config_Change]
 description = Real-time FortiGate configuration change alerts
 disabled = 0
@@ -14,18 +23,13 @@ alert.suppress.fields = _time, device, user, cfgpath
 alert.suppress.period = 5m
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
-action.slack.param.attachment = {"color":"warning","blocks":[{"type":"header","text":{"type":"plain_text","text":"🔧 Config Change Alert"}},{"type":"section","fields":[{"type":"mrkdwn","text":"*Device:*\n$result.device$"},{"type":"mrkdwn","text":"*Admin:*\n$result.admin$"},{"type":"mrkdwn","text":"*Path:*\n$result.config_path$"},{"type":"mrkdwn","text":"*Method:*\n$result.access_method$"}]},{"type":"context","elements":[{"type":"mrkdwn","text":"Time: $result._time$"}]}]}
+action.slack.param.message = ━━━━━━━━━━━━━━━━━━━━━━━\n🔧 *Config Change Alert*\n━━━━━━━━━━━━━━━━━━━━━━━\n\n*📍 Device:* `$result.device$`\n*👤 Admin:* `$result.admin$`\n*🔧 Method:* `$result.access_method$`\n*📝 Path:* `$result.config_path$`\n\n*🕐 Time:* `$result._time$`\n\n━━━━━━━━━━━━━━━━━━━━━━━\n_Priority: HIGH | Review Required_
 search = index=fw type=event subtype=system (logid=0100044546 OR logid=0100044547) | eval device = coalesce(devname, "unknown") | eval admin = coalesce(user, "system") | eval config_path = coalesce(cfgpath, "unknown") | eval access_method = case(logid=="0100044546", "CLI", logid=="0100044547", "GUI", 1=1, "Unknown") | table _time, device, admin, config_path, access_method
 
-[002.alert_FortiGate_System_Critical]
-description = System critical events
-disabled = 1
-
-[003.alert_FortiGate_Traffic_Anomaly]
-description = Traffic anomaly detection
-disabled = 1
-
-[004.alert_FortiGate_VPN_Failure]
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+# 002: VPN Failure (Channel 1 - Real-time Alert)
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+[002.alert_FortiGate_VPN_Failure]
 description = Real-time VPN connection failures
 disabled = 0
 cron_schedule = * * * * *
@@ -40,31 +44,13 @@ alert.suppress.fields = user, remip
 alert.suppress.period = 30m
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
-action.slack.param.attachment = {"color":"danger","blocks":[{"type":"header","text":{"type":"plain_text","text":"🔒 VPN Failure Alert"}},{"type":"section","fields":[{"type":"mrkdwn","text":"*Device:*\n$result.device$"},{"type":"mrkdwn","text":"*User:*\n$result.vpn_user$"},{"type":"mrkdwn","text":"*Remote IP:*\n$result.remote_ip$"},{"type":"mrkdwn","text":"*Status:*\n$result.vpn_status$"}]},{"type":"section","text":{"type":"mrkdwn","text":"*Reason:* $result.vpn_reason$"}},{"type":"context","elements":[{"type":"mrkdwn","text":"Time: $result._time$"}]}]}
+action.slack.param.message = ━━━━━━━━━━━━━━━━━━━━━━━\n🔒 *VPN Failure Alert*\n━━━━━━━━━━━━━━━━━━━━━━━\n\n*📍 Device:* `$result.device$`\n*👤 User:* `$result.vpn_user$`\n*🌐 IP:* `$result.remote_ip$`\n*⚠️  Status:* `$result.vpn_status$`\n*📋 Reason:* `$result.vpn_reason$`\n\n*🕐 Time:* `$result._time$`\n\n━━━━━━━━━━━━━━━━━━━━━━━\n_Priority: MEDIUM | Investigate_
 search = index=fw type=event subtype=vpn (logid=0101037131 OR logid=0101037124 OR logid=0101037134) | eval device = coalesce(devname, "unknown") | eval vpn_user = coalesce(user, "N/A") | eval remote_ip = coalesce(remip, "-") | eval vpn_status = case(logid=="0101037131", "Auth Failed", logid=="0101037124", "Tunnel Down", logid=="0101037134", "Disconnected", 1=1, "Error") | eval vpn_reason = coalesce(reason, msg, "No reason") | dedup device, vpn_user, remote_ip | table _time, device, vpn_user, remote_ip, vpn_status, vpn_reason
 
-[005.alert_FortiAnalyzer_Device_Login_Failure]
-description = FortiAnalyzer device login failures
-disabled = 1
-
-[006.alert_FortiGate_Security_Rating_Low]
-description = Security rating summary
-disabled = 1
-cron_schedule = 0 9 * * *
-dispatch.earliest_time = -24h
-dispatch.latest_time = now
-enableSched = 1
-schedule_priority = low
-alert.track = 0
-action.summary_index = 1
-action.summary_index._name = summary_fw
-search = index=fw subtype=security-rating (logid=0110052000 OR logid=0110052001) | stats count
-
-[007.alert_FortiGate_User_Activity]
-description = User activity monitoring
-disabled = 1
-
-[008.alert_FortiAnalyzer_LogDev_Warning]
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+# 003: LogDev Warning (Channel 1 - Real-time Alert)
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+[003.alert_FortiAnalyzer_LogDev_Warning]
 description = FortiAnalyzer log device warnings
 disabled = 0
 cron_schedule = * * * * *
@@ -79,23 +65,13 @@ alert.suppress.fields = logid
 alert.suppress.period = 12h
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
-action.slack.param.attachment = {"color":"#ff9900","blocks":[{"type":"header","text":{"type":"plain_text","text":"📡 FortiAnalyzer LogDev Warning"}},{"type":"section","fields":[{"type":"mrkdwn","text":"*Issue:*\n$result.issue_type$"},{"type":"mrkdwn","text":"*Level:*\n$result.severity_level$"}]},{"type":"section","text":{"type":"mrkdwn","text":"*Message:* $result.description$"}},{"type":"context","elements":[{"type":"mrkdwn","text":"Time: $result._time$ | LogID: $result.logid$"}]}]}
+action.slack.param.message = ━━━━━━━━━━━━━━━━━━━━━━━\n📡 *LogDev Warning*\n━━━━━━━━━━━━━━━━━━━━━━━\n\n*⚠️  Issue:* `$result.issue_type$`\n*🚨 Level:* `$result.severity_level$`\n*📋 Message:* `$result.description$`\n\n*🔍 LogID:* `$result.logid$`\n*🕐 Time:* `$result._time$`\n\n━━━━━━━━━━━━━━━━━━━━━━━\n_Priority: MEDIUM | Check System_
 search = index=fw subtype=logdev devname=".self" logid=220001 level IN ("warning","error","critical") | eval issue_type = case(like(msg, "%offline%"), "Device Offline", like(msg, "%disk%"), "Disk Low", like(msg, "%connection%"), "Connection Error", 1=1, "Log Device Issue") | eval severity_level = upper(level) | eval description = coalesce(msg, "No details") | dedup logid, issue_type | table _time, logid, severity_level, issue_type, description
 
-[009.alert_FortiGate_Event_Summary]
-description = Hourly event summary
-disabled = 0
-cron_schedule = 0 * * * *
-dispatch.earliest_time = -1h
-dispatch.latest_time = now
-enableSched = 1
-schedule_priority = low
-alert.track = 0
-action.summary_index = 1
-action.summary_index._name = summary_fw
-search = index=fw | stats count
-
-[010.alert_FortiGate_Metrics_Anomaly]
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+# 004: Metrics Anomaly (Channel 1 - Real-time Alert)
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+[004.alert_FortiGate_Metrics_Anomaly]
 description = System metrics anomaly detection
 disabled = 0
 cron_schedule = * * * * *
@@ -111,5 +87,130 @@ alert.suppress.fields = devname
 alert.suppress.period = 30m
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
-action.slack.param.attachment = {"color":"danger","blocks":[{"type":"header","text":{"type":"plain_text","text":"🔥 Metrics Anomaly Alert"}},{"type":"section","fields":[{"type":"mrkdwn","text":"*Device:*\n$result.device$"},{"type":"mrkdwn","text":"*Severity:*\n$result.severity$"}]},{"type":"section","text":{"type":"mrkdwn","text":"*Anomalies:* $result.anomaly_types$\n*Details:* $result.details$"}},{"type":"context","elements":[{"type":"mrkdwn","text":"Time: $result._time$"}]}]}
+action.slack.param.message = ━━━━━━━━━━━━━━━━━━━━━━━\n🔥 *Metrics Anomaly Alert*\n━━━━━━━━━━━━━━━━━━━━━━━\n\n*📍 Device:* `$result.device$`\n*🚨 Severity:* `$result.severity$`\n*⚠️  Anomalies:* `$result.anomaly_types$`\n*📋 Details:* `$result.details$`\n\n*🕐 Time:* `$result._time$`\n\n━━━━━━━━━━━━━━━━━━━━━━━\n_Priority: HIGH | Check Load_
 search = index=fw earliest=-1m latest=now | eval device = coalesce(devname, "unknown") | eval cpu_current = coalesce(cpu, 0) | eval mem_current = coalesce(mem, 0) | stats values(cpu_current) as cpu_current, values(mem_current) as mem_current by device | eval anomaly_types = "CPU/Memory" | eval severity = "HIGH" | eval details = "Check system load" | table device, anomaly_types, severity, details
+
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+# 005: System Critical (Channel 1 - Real-time Alert)
+# ⚠️  Suppression: 1m (reduced from 15m per user request)
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+[005.alert_FortiGate_System_Critical]
+description = System critical events and errors
+disabled = 0
+cron_schedule = * * * * *
+dispatch.earliest_time = rt-1m
+dispatch.latest_time = rt
+enableSched = 1
+realtime_schedule = 1
+schedule_priority = highest
+alert.track = 1
+alert.digest_mode = 0
+alert.suppress = 1
+alert.suppress.fields = devname, msg
+alert.suppress.period = 1m
+action.slack = 1
+action.slack.param.channel = #security-firewall-alert
+action.slack.param.message = ━━━━━━━━━━━━━━━━━━━━━━━\n🚨 *CRITICAL System Alert*\n━━━━━━━━━━━━━━━━━━━━━━━\n\n*📍 Device:* `$result.device$`\n*🔴 Level:* `CRITICAL`\n*⚠️  Event:* `$result.event_type$`\n*📋 Message:* `$result.message$`\n\n*🕐 Time:* `$result._time$`\n\n━━━━━━━━━━━━━━━━━━━━━━━\n_Priority: CRITICAL | Immediate Action_
+search = index=fw level=critical OR level=error | eval device = coalesce(devname, "unknown") | eval event_type = coalesce(subtype, type, "system") | eval message = coalesce(msg, "Critical system event") | dedup device, message | table _time, device, event_type, message
+
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+# 001-2: Config Change Metrics (Channel 2 - Summary Index)
+# LogID-based metric collection for #security-firewall
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+[001-2.metrics_FortiGate_Config_Change]
+description = Config change metrics by LogID (0100044546, 0100044547)
+disabled = 0
+cron_schedule = */5 * * * *
+dispatch.earliest_time = -5m
+dispatch.latest_time = now
+enableSched = 1
+schedule_priority = low
+alert.track = 0
+action.summary_index = 1
+action.summary_index._name = summary_fw
+search = index=fw type=event subtype=system (logid=0100044546 OR logid=0100044547) | eval device = coalesce(devname, "unknown") | eval access_method = case(logid=="0100044546", "CLI", logid=="0100044547", "GUI", 1=1, "Unknown") | stats count as event_count, dc(user) as unique_admins, values(user) as admins by logid, device, access_method | eval metric_type="config_change"
+
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+# 002-2: VPN Failure Metrics (Channel 2 - Summary Index)
+# LogID-based metric collection for #security-firewall
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+[002-2.metrics_FortiGate_VPN_Failure]
+description = VPN failure metrics by LogID (0101037131, 0101037124, 0101037134)
+disabled = 0
+cron_schedule = */5 * * * *
+dispatch.earliest_time = -5m
+dispatch.latest_time = now
+enableSched = 1
+schedule_priority = low
+alert.track = 0
+action.summary_index = 1
+action.summary_index._name = summary_fw
+search = index=fw type=event subtype=vpn (logid=0101037131 OR logid=0101037124 OR logid=0101037134) | eval device = coalesce(devname, "unknown") | eval vpn_status = case(logid=="0101037131", "Auth Failed", logid=="0101037124", "Tunnel Down", logid=="0101037134", "Disconnected", 1=1, "Error") | stats count as event_count, dc(user) as unique_users, dc(remip) as unique_ips by logid, device, vpn_status | eval metric_type="vpn_failure"
+
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+# 003-2: LogDev Warning Metrics (Channel 2 - Summary Index)
+# LogID-based metric collection for #security-firewall
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+[003-2.metrics_FortiAnalyzer_LogDev_Warning]
+description = LogDev warning metrics by LogID (220001)
+disabled = 0
+cron_schedule = */5 * * * *
+dispatch.earliest_time = -5m
+dispatch.latest_time = now
+enableSched = 1
+schedule_priority = low
+alert.track = 0
+action.summary_index = 1
+action.summary_index._name = summary_fw
+search = index=fw subtype=logdev devname=".self" logid=220001 level IN ("warning","error","critical") | eval issue_type = case(like(msg, "%offline%"), "Device Offline", like(msg, "%disk%"), "Disk Low", like(msg, "%connection%"), "Connection Error", 1=1, "Log Device Issue") | eval severity_level = upper(level) | stats count as event_count, values(msg) as messages by logid, severity_level, issue_type | eval metric_type="logdev_warning"
+
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+# 004-2: Metrics Anomaly Metrics (Channel 2 - Summary Index)
+# Device performance metrics collection
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+[004-2.metrics_FortiGate_Metrics_Anomaly]
+description = System metrics anomaly statistics
+disabled = 0
+cron_schedule = */5 * * * *
+dispatch.earliest_time = -5m
+dispatch.latest_time = now
+enableSched = 1
+schedule_priority = low
+alert.track = 0
+action.summary_index = 1
+action.summary_index._name = summary_fw
+search = index=fw earliest=-5m latest=now | eval device = coalesce(devname, "unknown") | eval cpu_current = coalesce(cpu, 0) | eval mem_current = coalesce(mem, 0) | stats avg(cpu_current) as avg_cpu, max(cpu_current) as max_cpu, avg(mem_current) as avg_mem, max(mem_current) as max_mem, count as sample_count by device | eval metric_type="system_metrics"
+
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+# 005-2: System Critical Metrics (Channel 2 - Summary Index)
+# Critical event metrics collection
+# ⚠️  Suppression: 1m (reduced from 15m per user request)
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+[005-2.metrics_FortiGate_System_Critical]
+description = System critical events metrics
+disabled = 0
+cron_schedule = */5 * * * *
+dispatch.earliest_time = -5m
+dispatch.latest_time = now
+enableSched = 1
+schedule_priority = low
+alert.track = 0
+action.summary_index = 1
+action.summary_index._name = summary_fw
+search = index=fw level=critical OR level=error | eval device = coalesce(devname, "unknown") | eval event_type = coalesce(subtype, type, "system") | stats count as event_count, values(msg) as messages by level, device, event_type | eval metric_type="critical_events"
+
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+# 009: General Event Summary (Dashboard Support)
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+[009.alert_FortiGate_Event_Summary]
+description = Hourly event summary
+disabled = 0
+cron_schedule = 0 * * * *
+dispatch.earliest_time = -1h
+dispatch.latest_time = now
+enableSched = 1
+schedule_priority = low
+alert.track = 0
+action.summary_index = 1
+action.summary_index._name = summary_fw
+search = index=fw | stats count
