fix: Simplify all queries to use LogID-only filtering (remove type/subtype filters)

--- a/configs/savedsearches-fortigate-production-alerts.conf
+++ b/configs/savedsearches-fortigate-production-alerts.conf
@@ -24,7 +24,7 @@ alert.suppress.period = 5m
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
 action.slack.param.message = ━━━━━━━━━━━━━━━━━━━━━━━\n🔧 *Config Change Alert*\n━━━━━━━━━━━━━━━━━━━━━━━\n\n*📍 Device:* `$result.device$`\n*👤 Admin:* `$result.admin$`\n*🔧 Method:* `$result.access_method$`\n*📝 Path:* `$result.config_path$`\n\n*🕐 Time:* `$result._time$`\n\n━━━━━━━━━━━━━━━━━━━━━━━\n_Priority: HIGH | Review Required_
-search = index=fw type=event subtype=system (logid=0100044546 OR logid=0100044547) | eval device = coalesce(devname, "unknown") | eval admin = coalesce(user, "system") | eval config_path = coalesce(cfgpath, "unknown") | eval access_method = case(logid=="0100044546", "CLI", logid=="0100044547", "GUI", 1=1, "Unknown") | table _time, device, admin, config_path, access_method
+search = index=fw (logid=0100044546 OR logid=0100044547) | eval device = coalesce(devname, "unknown") | eval admin = coalesce(user, "system") | eval config_path = coalesce(cfgpath, "unknown") | eval access_method = case(logid=="0100044546", "CLI", logid=="0100044547", "GUI", 1=1, "Unknown") | table _time, device, admin, config_path, access_method
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 # 002: VPN Failure (Channel 1 - Real-time Alert)
@@ -45,7 +45,7 @@ alert.suppress.period = 30m
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
 action.slack.param.message = ━━━━━━━━━━━━━━━━━━━━━━━\n🔒 *VPN Failure Alert*\n━━━━━━━━━━━━━━━━━━━━━━━\n\n*📍 Device:* `$result.device$`\n*👤 User:* `$result.vpn_user$`\n*🌐 IP:* `$result.remote_ip$`\n*⚠️  Status:* `$result.vpn_status$`\n*📋 Reason:* `$result.vpn_reason$`\n\n*🕐 Time:* `$result._time$`\n\n━━━━━━━━━━━━━━━━━━━━━━━\n_Priority: MEDIUM | Investigate_
-search = index=fw type=event subtype=vpn (logid=0101037131 OR logid=0101037124 OR logid=0101037134) | eval device = coalesce(devname, "unknown") | eval vpn_user = coalesce(user, "N/A") | eval remote_ip = coalesce(remip, "-") | eval vpn_status = case(logid=="0101037131", "Auth Failed", logid=="0101037124", "Tunnel Down", logid=="0101037134", "Disconnected", 1=1, "Error") | eval vpn_reason = coalesce(reason, msg, "No reason") | dedup device, vpn_user, remote_ip | table _time, device, vpn_user, remote_ip, vpn_status, vpn_reason
+search = index=fw (logid=0101037131 OR logid=0101037124 OR logid=0101037134) | eval device = coalesce(devname, "unknown") | eval vpn_user = coalesce(user, "N/A") | eval remote_ip = coalesce(remip, "-") | eval vpn_status = case(logid=="0101037131", "Auth Failed", logid=="0101037124", "Tunnel Down", logid=="0101037134", "Disconnected", 1=1, "Error") | eval vpn_reason = coalesce(reason, msg, "No reason") | dedup device, vpn_user, remote_ip | table _time, device, vpn_user, remote_ip, vpn_status, vpn_reason
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 # 003: LogDev Warning (Channel 1 - Real-time Alert)
@@ -66,7 +66,7 @@ alert.suppress.period = 12h
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
 action.slack.param.message = ━━━━━━━━━━━━━━━━━━━━━━━\n📡 *LogDev Warning*\n━━━━━━━━━━━━━━━━━━━━━━━\n\n*⚠️  Issue:* `$result.issue_type$`\n*🚨 Level:* `$result.severity_level$`\n*📋 Message:* `$result.description$`\n\n*🔍 LogID:* `$result.logid$`\n*🕐 Time:* `$result._time$`\n\n━━━━━━━━━━━━━━━━━━━━━━━\n_Priority: MEDIUM | Check System_
-search = index=fw subtype=logdev devname=".self" logid=220001 level IN ("warning","error","critical") | eval issue_type = case(like(msg, "%offline%"), "Device Offline", like(msg, "%disk%"), "Disk Low", like(msg, "%connection%"), "Connection Error", 1=1, "Log Device Issue") | eval severity_level = upper(level) | eval description = coalesce(msg, "No details") | dedup logid, issue_type | table _time, logid, severity_level, issue_type, description
+search = index=fw logid=220001 | eval issue_type = case(like(msg, "%offline%"), "Device Offline", like(msg, "%disk%"), "Disk Low", like(msg, "%connection%"), "Connection Error", 1=1, "Log Device Issue") | eval severity_level = upper(level) | eval description = coalesce(msg, "No details") | dedup logid, issue_type | table _time, logid, severity_level, issue_type, description
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 # 004: Metrics Anomaly (Channel 1 - Real-time Alert)
@@ -128,7 +128,7 @@ schedule_priority = low
 alert.track = 0
 action.summary_index = 1
 action.summary_index._name = summary_fw
-search = index=fw type=event subtype=system (logid=0100044546 OR logid=0100044547) | eval device = coalesce(devname, "unknown") | eval access_method = case(logid=="0100044546", "CLI", logid=="0100044547", "GUI", 1=1, "Unknown") | stats count as event_count, dc(user) as unique_admins, values(user) as admins by logid, device, access_method | eval metric_type="config_change"
+search = index=fw (logid=0100044546 OR logid=0100044547) | eval device = coalesce(devname, "unknown") | eval access_method = case(logid=="0100044546", "CLI", logid=="0100044547", "GUI", 1=1, "Unknown") | stats count as event_count, dc(user) as unique_admins, values(user) as admins by logid, device, access_method | eval metric_type="config_change"
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 # 002-2: VPN Failure Metrics (Channel 2 - Summary Index)
@@ -145,7 +145,7 @@ schedule_priority = low
 alert.track = 0
 action.summary_index = 1
 action.summary_index._name = summary_fw
-search = index=fw type=event subtype=vpn (logid=0101037131 OR logid=0101037124 OR logid=0101037134) | eval device = coalesce(devname, "unknown") | eval vpn_status = case(logid=="0101037131", "Auth Failed", logid=="0101037124", "Tunnel Down", logid=="0101037134", "Disconnected", 1=1, "Error") | stats count as event_count, dc(user) as unique_users, dc(remip) as unique_ips by logid, device, vpn_status | eval metric_type="vpn_failure"
+search = index=fw (logid=0101037131 OR logid=0101037124 OR logid=0101037134) | eval device = coalesce(devname, "unknown") | eval vpn_status = case(logid=="0101037131", "Auth Failed", logid=="0101037124", "Tunnel Down", logid=="0101037134", "Disconnected", 1=1, "Error") | stats count as event_count, dc(user) as unique_users, dc(remip) as unique_ips by logid, device, vpn_status | eval metric_type="vpn_failure"
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 # 003-2: LogDev Warning Metrics (Channel 2 - Summary Index)
@@ -162,7 +162,7 @@ schedule_priority = low
 alert.track = 0
 action.summary_index = 1
 action.summary_index._name = summary_fw
-search = index=fw subtype=logdev devname=".self" logid=220001 level IN ("warning","error","critical") | eval issue_type = case(like(msg, "%offline%"), "Device Offline", like(msg, "%disk%"), "Disk Low", like(msg, "%connection%"), "Connection Error", 1=1, "Log Device Issue") | eval severity_level = upper(level) | stats count as event_count, values(msg) as messages by logid, severity_level, issue_type | eval metric_type="logdev_warning"
+search = index=fw logid=220001 | eval issue_type = case(like(msg, "%offline%"), "Device Offline", like(msg, "%disk%"), "Disk Low", like(msg, "%connection%"), "Connection Error", 1=1, "Log Device Issue") | eval severity_level = upper(level) | stats count as event_count, values(msg) as messages by logid, severity_level, issue_type | eval metric_type="logdev_warning"
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 # 004-2: Metrics Anomaly Metrics (Channel 2 - Summary Index)
