fix: Convert 004/005 to simple LogID/level-based filtering with minimal eval

--- a/configs/savedsearches-fortigate-production-alerts.conf
+++ b/configs/savedsearches-fortigate-production-alerts.conf
@@ -72,7 +72,7 @@ search = index=fw logid=220001 | eval issue_type = case(like(msg, "%offline%"), 
 # 004: Metrics Anomaly (Channel 1 - Real-time Alert)
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 [004.alert_FortiGate_Metrics_Anomaly]
-description = System metrics anomaly detection
+description = System performance alerts (CPU/Memory high)
 disabled = 0
 cron_schedule = * * * * *
 dispatch.earliest_time = rt-1m
@@ -87,8 +87,8 @@ alert.suppress.fields = devname
 alert.suppress.period = 30m
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
-action.slack.param.message = ━━━━━━━━━━━━━━━━━━━━━━━\n🔥 *Metrics Anomaly Alert*\n━━━━━━━━━━━━━━━━━━━━━━━\n\n*📍 Device:* `$result.device$`\n*🚨 Severity:* `$result.severity$`\n*⚠️  Anomalies:* `$result.anomaly_types$`\n*📋 Details:* `$result.details$`\n\n*🕐 Time:* `$result._time$`\n\n━━━━━━━━━━━━━━━━━━━━━━━\n_Priority: HIGH | Check Load_
-search = index=fw earliest=-1m latest=now | eval device = coalesce(devname, "unknown") | eval cpu_current = coalesce(cpu, 0) | eval mem_current = coalesce(mem, 0) | stats values(cpu_current) as cpu_current, values(mem_current) as mem_current by device | eval anomaly_types = "CPU/Memory" | eval severity = "HIGH" | eval details = "Check system load" | table device, anomaly_types, severity, details
+action.slack.param.message = ━━━━━━━━━━━━━━━━━━━━━━━\n🔥 *Performance Alert*\n━━━━━━━━━━━━━━━━━━━━━━━\n\n*📍 Device:* `$result.device$`\n*⚠️  Issue:* `$result.issue$`\n*📋 Message:* `$result.message$`\n\n*🕐 Time:* `$result._time$`\n\n━━━━━━━━━━━━━━━━━━━━━━━\n_Priority: HIGH | Check Load_
+search = index=fw (logid=0100032001 OR logid=0100040704 OR logid=0100040705) | eval device = coalesce(devname, "unknown") | eval issue = case(logid=="0100040704", "CPU High", logid=="0100040705", "Memory High", 1=1, "Performance") | eval message = coalesce(msg, "Check system") | table _time, device, issue, message
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 # 005: System Critical (Channel 1 - Real-time Alert)
@@ -111,7 +111,7 @@ alert.suppress.period = 1m
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
 action.slack.param.message = ━━━━━━━━━━━━━━━━━━━━━━━\n🚨 *CRITICAL System Alert*\n━━━━━━━━━━━━━━━━━━━━━━━\n\n*📍 Device:* `$result.device$`\n*🔴 Level:* `CRITICAL`\n*⚠️  Event:* `$result.event_type$`\n*📋 Message:* `$result.message$`\n\n*🕐 Time:* `$result._time$`\n\n━━━━━━━━━━━━━━━━━━━━━━━\n_Priority: CRITICAL | Immediate Action_
-search = index=fw level=critical OR level=error | eval device = coalesce(devname, "unknown") | eval event_type = coalesce(subtype, type, "system") | eval message = coalesce(msg, "Critical system event") | dedup device, message | table _time, device, event_type, message
+search = index=fw (level=critical OR level=error) | eval device = coalesce(devname, "unknown") | eval message = coalesce(msg, "Critical event") | table _time, device, level, message
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 # 001-2: Config Change Metrics (Channel 2 - Summary Index)
