refactor: Remove all metrics queries (001-2 to 005-2) and dedup statements
- Deleted all metric collection queries (001-2, 002-2, 003-2, 004-2, 005-2) from config
- Removed dedup statements from 002 (VPN Failure) and 003 (LogDev Warning)
- Updated header: 'Real-time Alerts Only' (removed Channel 2 references)
- Cleaned up individual alert comments (removed 'Channel 1' text)
- Configuration now contains only 5 real-time alerts (001-005) + 009 summary
- All queries use LogID-only or level-only filtering with minimal eval

--- a/configs/savedsearches-fortigate-production-alerts.conf
+++ b/configs/savedsearches-fortigate-production-alerts.conf
@@ -1,11 +1,10 @@
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
-# FortiGate Production Alerts - Real-time Alerts + Metrics
-# Channel 1 (#security-firewall-alert): Real-time alerts (001-005)
-# Channel 2 (#security-firewall): LogID-based metric collection (001-2 through 005-2)
+# FortiGate Production Alerts - Real-time Alerts Only
+# Channel: #security-firewall-alert (Real-time alerts 001-005)
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
-# 001: Config Change (Channel 1 - Real-time Alert)
+# 001: Config Change (Real-time Alert)
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 [001.alert_FortiGate_Config_Change]
 description = Real-time FortiGate configuration change alerts
@@ -27,7 +26,7 @@ action.slack.param.message = ━━━━━━━━━━━━━━━━━
 search = index=fw (logid=0100044546 OR logid=0100044547) | eval device = coalesce(devname, "unknown") | eval admin = coalesce(user, "system") | eval config_path = coalesce(cfgpath, "unknown") | eval access_method = case(logid=="0100044546", "CLI", logid=="0100044547", "GUI", 1=1, "Unknown") | table _time, device, admin, config_path, access_method
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
-# 002: VPN Failure (Channel 1 - Real-time Alert)
+# 002: VPN Failure (Real-time Alert)
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 [002.alert_FortiGate_VPN_Failure]
 description = Real-time VPN connection failures
@@ -45,10 +44,10 @@ alert.suppress.period = 30m
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
 action.slack.param.message = ━━━━━━━━━━━━━━━━━━━━━━━\n🔒 *VPN Failure Alert*\n━━━━━━━━━━━━━━━━━━━━━━━\n\n*📍 Device:* `$result.device$`\n*👤 User:* `$result.vpn_user$`\n*🌐 IP:* `$result.remote_ip$`\n*⚠️  Status:* `$result.vpn_status$`\n*📋 Reason:* `$result.vpn_reason$`\n\n*🕐 Time:* `$result._time$`\n\n━━━━━━━━━━━━━━━━━━━━━━━\n_Priority: MEDIUM | Investigate_
-search = index=fw (logid=0101037131 OR logid=0101037124 OR logid=0101037134) | eval device = coalesce(devname, "unknown") | eval vpn_user = coalesce(user, "N/A") | eval remote_ip = coalesce(remip, "-") | eval vpn_status = case(logid=="0101037131", "Auth Failed", logid=="0101037124", "Tunnel Down", logid=="0101037134", "Disconnected", 1=1, "Error") | eval vpn_reason = coalesce(reason, msg, "No reason") | dedup device, vpn_user, remote_ip | table _time, device, vpn_user, remote_ip, vpn_status, vpn_reason
+search = index=fw (logid=0101037131 OR logid=0101037124 OR logid=0101037134) | eval device = coalesce(devname, "unknown") | eval vpn_user = coalesce(user, "N/A") | eval remote_ip = coalesce(remip, "-") | eval vpn_status = case(logid=="0101037131", "Auth Failed", logid=="0101037124", "Tunnel Down", logid=="0101037134", "Disconnected", 1=1, "Error") | eval vpn_reason = coalesce(reason, msg, "No reason") | table _time, device, vpn_user, remote_ip, vpn_status, vpn_reason
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
-# 003: LogDev Warning (Channel 1 - Real-time Alert)
+# 003: LogDev Warning (Real-time Alert)
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 [003.alert_FortiAnalyzer_LogDev_Warning]
 description = FortiAnalyzer log device warnings
@@ -66,10 +65,10 @@ alert.suppress.period = 12h
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
 action.slack.param.message = ━━━━━━━━━━━━━━━━━━━━━━━\n📡 *LogDev Warning*\n━━━━━━━━━━━━━━━━━━━━━━━\n\n*⚠️  Issue:* `$result.issue_type$`\n*🚨 Level:* `$result.severity_level$`\n*📋 Message:* `$result.description$`\n\n*🔍 LogID:* `$result.logid$`\n*🕐 Time:* `$result._time$`\n\n━━━━━━━━━━━━━━━━━━━━━━━\n_Priority: MEDIUM | Check System_
-search = index=fw logid=220001 | eval issue_type = case(like(msg, "%offline%"), "Device Offline", like(msg, "%disk%"), "Disk Low", like(msg, "%connection%"), "Connection Error", 1=1, "Log Device Issue") | eval severity_level = upper(level) | eval description = coalesce(msg, "No details") | dedup logid, issue_type | table _time, logid, severity_level, issue_type, description
+search = index=fw logid=220001 | eval issue_type = case(like(msg, "%offline%"), "Device Offline", like(msg, "%disk%"), "Disk Low", like(msg, "%connection%"), "Connection Error", 1=1, "Log Device Issue") | eval severity_level = upper(level) | eval description = coalesce(msg, "No details") | table _time, logid, severity_level, issue_type, description
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
-# 004: Metrics Anomaly (Channel 1 - Real-time Alert)
+# 004: Metrics Anomaly (Real-time Alert)
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 [004.alert_FortiGate_Metrics_Anomaly]
 description = System performance alerts (CPU/Memory high)
@@ -91,7 +90,7 @@ action.slack.param.message = ━━━━━━━━━━━━━━━━━
 search = index=fw (logid=0100032001 OR logid=0100040704 OR logid=0100040705) | eval device = coalesce(devname, "unknown") | eval issue = case(logid=="0100040704", "CPU High", logid=="0100040705", "Memory High", 1=1, "Performance") | eval message = coalesce(msg, "Check system") | table _time, device, issue, message
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
-# 005: System Critical (Channel 1 - Real-time Alert)
+# 005: System Critical (Real-time Alert)
 # ⚠️  Suppression: 1m (reduced from 15m per user request)
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 [005.alert_FortiGate_System_Critical]
@@ -112,92 +111,6 @@ action.slack = 1
 action.slack.param.channel = #security-firewall-alert
 action.slack.param.message = ━━━━━━━━━━━━━━━━━━━━━━━\n🚨 *CRITICAL System Alert*\n━━━━━━━━━━━━━━━━━━━━━━━\n\n*📍 Device:* `$result.device$`\n*🔴 Level:* `CRITICAL`\n*⚠️  Event:* `$result.event_type$`\n*📋 Message:* `$result.message$`\n\n*🕐 Time:* `$result._time$`\n\n━━━━━━━━━━━━━━━━━━━━━━━\n_Priority: CRITICAL | Immediate Action_
 search = index=fw (level=critical OR level=error) | eval device = coalesce(devname, "unknown") | eval message = coalesce(msg, "Critical event") | table _time, device, level, message
-
-# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
-# 001-2: Config Change Metrics (Channel 2 - Summary Index)
-# LogID-based metric collection for #security-firewall
-# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
-[001-2.metrics_FortiGate_Config_Change]
-description = Config change metrics by LogID (0100044546, 0100044547)
-disabled = 0
-cron_schedule = */5 * * * *
-dispatch.earliest_time = -5m
-dispatch.latest_time = now
-enableSched = 1
-schedule_priority = low
-alert.track = 0
-action.summary_index = 1
-action.summary_index._name = summary_fw
-search = index=fw (logid=0100044546 OR logid=0100044547) | eval device = coalesce(devname, "unknown") | eval access_method = case(logid=="0100044546", "CLI", logid=="0100044547", "GUI", 1=1, "Unknown") | stats count as event_count, dc(user) as unique_admins, values(user) as admins by logid, device, access_method | eval metric_type="config_change"
-
-# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
-# 002-2: VPN Failure Metrics (Channel 2 - Summary Index)
-# LogID-based metric collection for #security-firewall
-# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
-[002-2.metrics_FortiGate_VPN_Failure]
-description = VPN failure metrics by LogID (0101037131, 0101037124, 0101037134)
-disabled = 0
-cron_schedule = */5 * * * *
-dispatch.earliest_time = -5m
-dispatch.latest_time = now
-enableSched = 1
-schedule_priority = low
-alert.track = 0
-action.summary_index = 1
-action.summary_index._name = summary_fw
-search = index=fw (logid=0101037131 OR logid=0101037124 OR logid=0101037134) | eval device = coalesce(devname, "unknown") | eval vpn_status = case(logid=="0101037131", "Auth Failed", logid=="0101037124", "Tunnel Down", logid=="0101037134", "Disconnected", 1=1, "Error") | stats count as event_count, dc(user) as unique_users, dc(remip) as unique_ips by logid, device, vpn_status | eval metric_type="vpn_failure"
-
-# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
-# 003-2: LogDev Warning Metrics (Channel 2 - Summary Index)
-# LogID-based metric collection for #security-firewall
-# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
-[003-2.metrics_FortiAnalyzer_LogDev_Warning]
-description = LogDev warning metrics by LogID (220001)
-disabled = 0
-cron_schedule = */5 * * * *
-dispatch.earliest_time = -5m
-dispatch.latest_time = now
-enableSched = 1
-schedule_priority = low
-alert.track = 0
-action.summary_index = 1
-action.summary_index._name = summary_fw
-search = index=fw logid=220001 | eval issue_type = case(like(msg, "%offline%"), "Device Offline", like(msg, "%disk%"), "Disk Low", like(msg, "%connection%"), "Connection Error", 1=1, "Log Device Issue") | eval severity_level = upper(level) | stats count as event_count, values(msg) as messages by logid, severity_level, issue_type | eval metric_type="logdev_warning"
-
-# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
-# 004-2: Metrics Anomaly Metrics (Channel 2 - Summary Index)
-# Device performance metrics collection
-# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
-[004-2.metrics_FortiGate_Metrics_Anomaly]
-description = System metrics anomaly statistics
-disabled = 0
-cron_schedule = */5 * * * *
-dispatch.earliest_time = -5m
-dispatch.latest_time = now
-enableSched = 1
-schedule_priority = low
-alert.track = 0
-action.summary_index = 1
-action.summary_index._name = summary_fw
-search = index=fw earliest=-5m latest=now | eval device = coalesce(devname, "unknown") | eval cpu_current = coalesce(cpu, 0) | eval mem_current = coalesce(mem, 0) | stats avg(cpu_current) as avg_cpu, max(cpu_current) as max_cpu, avg(mem_current) as avg_mem, max(mem_current) as max_mem, count as sample_count by device | eval metric_type="system_metrics"
-
-# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
-# 005-2: System Critical Metrics (Channel 2 - Summary Index)
-# Critical event metrics collection
-# ⚠️  Suppression: 1m (reduced from 15m per user request)
-# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
-[005-2.metrics_FortiGate_System_Critical]
-description = System critical events metrics
-disabled = 0
-cron_schedule = */5 * * * *
-dispatch.earliest_time = -5m
-dispatch.latest_time = now
-enableSched = 1
-schedule_priority = low
-alert.track = 0
-action.summary_index = 1
-action.summary_index._name = summary_fw
-search = index=fw level=critical OR level=error | eval device = coalesce(devname, "unknown") | eval event_type = coalesce(subtype, type, "system") | stats count as event_count, values(msg) as messages by level, device, event_type | eval metric_type="critical_events"
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 # 009: General Event Summary (Dashboard Support)
