fix: Correct 005 Slack message to use actual query fields
- Changed from $result.event_type$ to $result.level$ (event_type doesn't exist in query output)
- Removed redundant 'Event' line (level already shown above)
- Query outputs: _time, device, level, message
- Message now correctly displays: Device, Level (critical/error), Message, Time

--- a/configs/savedsearches-fortigate-production-alerts.conf
+++ b/configs/savedsearches-fortigate-production-alerts.conf
@@ -109,7 +109,7 @@ alert.suppress.fields = devname, msg
 alert.suppress.period = 1m
 action.slack = 1
 action.slack.param.channel = #security-firewall-alert
-action.slack.param.message = ━━━━━━━━━━━━━━━━━━━━━━━\n🚨 *CRITICAL System Alert*\n━━━━━━━━━━━━━━━━━━━━━━━\n\n*📍 Device:* `$result.device$`\n*🔴 Level:* `CRITICAL`\n*⚠️  Event:* `$result.event_type$`\n*📋 Message:* `$result.message$`\n\n*🕐 Time:* `$result._time$`\n\n━━━━━━━━━━━━━━━━━━━━━━━\n_Priority: CRITICAL | Immediate Action_
+action.slack.param.message = ━━━━━━━━━━━━━━━━━━━━━━━\n🚨 *CRITICAL System Alert*\n━━━━━━━━━━━━━━━━━━━━━━━\n\n*📍 Device:* `$result.device$`\n*🔴 Level:* `$result.level$`\n*📋 Message:* `$result.message$`\n\n*🕐 Time:* `$result._time$`\n\n━━━━━━━━━━━━━━━━━━━━━━━\n_Priority: CRITICAL | Immediate Action_
 search = index=fw (level=critical OR level=error) | eval device = coalesce(devname, "unknown") | eval message = coalesce(msg, "Critical event") | table _time, device, level, message
 
 # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
